Fixing overlay blocking site below while hidden
When the overlay disappears, #CSSFragLinkWrapper's height and width are
now set to 0px, so that it isn't still invisibly covering the entire
window.

--- a/CSSFrag.safariextension/style.css
+++ b/CSSFrag.safariextension/style.css
@@ -50,4 +50,5 @@ input#CSSFragLinkInput {
 input#CSSFragLinkInput:focus { outline: none !important; }
 
 #CSSFragLinkWrapper.active { opacity: 1 !important; }
+#CSSFragLinkWrapper.hidden { height: 0px !important; width: 0px !important; }
 #CSSFragLinkWrapper.active > #CSSFragLinkContainer { -webkit-transform: scale(1) !important; opacity: 1 !important; }
